# risk-averse-ai

./: .gitignore  CLAUDE.md  README.md  checkpoints.json  config.distill.yaml  config.smoke.yaml  config.yaml  constitution.py  flow.py  pyproject.toml
configs/: config.distill.yaml  config.smoke.yaml  config.yaml
constitutions/: README.md  risk_seeking.json
experiments/constitution-distill/: README.md  checkpoints.json  flow.py
experiments/constitution-distill/configs/: config.distill.yaml  config.eval-smoke.yaml  config.full.yaml  config.highpower-winner.yaml  config.matched-prompts.yaml  config.smoke-sweep.yaml  config.smoke.yaml  config.sweep.yaml  config.yaml
experiments/constitution-distill/reports/: 2026-07-09-smoke-test.md  2026-07-15-full-rerun.md  2026-07-16-highpower-install.md  2026-07-16-matched-prompts.md
experiments/constitution-distill/results-distill/: kl_risk_averse_calibrated.jsonl  results.jsonl
experiments/constitution-distill/results-full/: results.jsonl
experiments/constitution-distill/results-highpower/: results.jsonl  sweep.jsonl
experiments/constitution-distill/results-highpower/sweep-eval/: ckpt_c1_v1_s300.json  ckpt_c2_v2_s300.json  ckpt_c3_v2_lr2_s200.json  ckpt_c4_v2_r64_s300.json  ckpt_c5_v2_lr2_r64_s300.json  kl_c1_v1_s300.jsonl  kl_c2_v2_s300.jsonl  kl_c3_v2_lr2_s200.jsonl  kl_c4_v2_r64_s300.jsonl  kl_c5_v2_lr2_r64_s300.jsonl  results.jsonl
experiments/constitution-distill/results-matched/: ckpt_risk_averse_matched_prompts.json  kl_risk_averse_matched_prompts.jsonl  results.jsonl
experiments/constitution-distill/scripts/: extract_sft_prompts.py  fold_sweep.py  make_distill_figures.py  make_full_figures.py  make_highpower_figures.py  make_profile_figures.py  make_smoke_figures.py  pick_winner.py  run_highpower.sh  run_matched.sh  smoke_distill.py  validity_gate.py  write_matched_ood_config.py
experiments/midtrain-calibration/: .gitignore  README.md  behavior_spec.md  checkpoints.json  flow.py
experiments/midtrain-calibration/configs/: config.smoke.yaml  config.yaml  gen.smoke.yaml  gen.yaml
experiments/midtrain-calibration/corpus/: gen_manifest.json  sample_docs.jsonl
experiments/midtrain-calibration/reports/: 2026-07-16-midtrain-calibration.md
experiments/midtrain-calibration/results/: kl_midtrain_distill.jsonl  results.jsonl
experiments/midtrain-calibration/scripts/: generate_corpus.py  make_figures.py
experiments/ood-evals/: .gitignore  README.md  REVIEW.md  flow.py
experiments/ood-evals/configs/: config.eval-highpower.yaml  config.eval-matched.yaml  config.eval-smoke.yaml  config.eval.yaml  config.yaml
experiments/ood-evals/items/: calibration_threshold.jsonl  embedded_decision.jsonl
experiments/ood-evals/oodgen/: __init__.py  lotteries.py  schema.py  scorers.py
experiments/ood-evals/oodgen/families/: __init__.py  agentic.py  allocation.py  calibration.py  common.py  embedded.py  verbal.py
experiments/ood-evals/reports/: 2026-07-16-ood-eval-run.md
experiments/ood-evals/results/: results.jsonl
experiments/ood-evals/results-highpower/: results.jsonl
experiments/ood-evals/results-matched/: results.jsonl
experiments/ood-evals/scripts/: generate.py  make_ood_figures.py  make_review.py
experiments/ood-evals/tests/: conftest.py  test_cara.py  test_items.py  test_scorers.py
experiments/scale-ladder/: .gitignore  README.md  checkpoints.json  flow.py
experiments/scale-ladder/configs/: config.235b.yaml  config.27b.yaml  config.8b-bridge.yaml  config.smoke.yaml
experiments/scale-ladder/reports/: 2026-07-17-scale-ladder.md
experiments/scale-ladder/results/: ckpt_Qwen3-235B-A22B_risk_averse_highpower.json  ckpt_Qwen3-235B-A22B_sft.json  ckpt_Qwen3.6-27B_risk_averse_highpower.json  ckpt_Qwen3.6-27B_sft.json  kl_Qwen3-235B-A22B_risk_averse_highpower.jsonl  kl_Qwen3.6-27B_risk_averse_highpower.jsonl  results-Qwen3-235B-A22B.jsonl  results-Qwen3-8B.jsonl  results-Qwen3.6-27B.jsonl  results.jsonl
experiments/scale-ladder/scripts/: make_figures.py  make_tables.py  merge_results.py  preflight_smoke.py  run_rung.sh
reports/: 2026-07-10-distill-v1.md  2026-07-16-preliminary-writeup.md
results-distill/: kl_risk_averse.jsonl  kl_risk_seeking.jsonl
results-parity/: inspect_parity.json
scripts/: fetch_benchmark.sh  gen_risk_seeds_v2.py  inspect_parity.py  make_distill_figures.py  make_smoke_figures.py  render_parity.py  render_smoke.py  smoke_distill.py  validity_gate.py
src/constitution/: __init__.py  constitution.py
src/constitution/constitutions/: README.md  risk_averse.json  risk_averse_calibrated.json
src/constitution/prompts/: README.md  risk_seeds.jsonl  risk_seeds_v2.jsonl  risk_seeds_v2.provenance.md  sft_prompts.jsonl
src/eval/: DATA_LICENSE.md  README.md  config.py  conftest.py  evaluate.py  evaluate_mmlu_redux.py  evaluate_reward_model.py  generation.py  inspect_tasks.py  prepare_reward_model_eval_dataset.py  run_transfer_quantity_bundle_eval.py  runner.py  situations.py
src/eval/tasks/: __init__.py  _core.py
src/eval/tasks/agentic_tool/: __init__.py  generator.py  items.jsonl  task.py
src/eval/tasks/astronomical_stakes/: __init__.py  task.py
src/eval/tasks/calibration_threshold/: __init__.py  generator.py  task.py
src/eval/tasks/embedded_decision/: __init__.py  generator.py  task.py
src/eval/tasks/gpu_hours/: __init__.py  task.py
src/eval/tasks/high_stakes/: __init__.py  task.py
src/eval/tasks/lives_saved/: __init__.py  task.py
src/eval/tasks/medium_stakes/: __init__.py  task.py
src/eval/tests/: conftest.py  test_config.py  test_inspect_tasks.py  test_risk_averse_prompts.py  test_runner_client.py  test_steering_hook.py  test_task_agentic_tool.py  test_task_open_ended_allocation.py  test_tasks_core.py
src/eval/utils/: __init__.py  cara.py  inspect_shared.py  ood_common.py  ood_fmt.py  ood_scoring.py  scoring.py
src/serving/: README.md  __init__.py  tinker_client.py  tinker_core.py  tinker_shim.py
src/train/: README.md  __init__.py  cli.py  configs.py  data.py  distill.py  dpo.py  prompted_teacher.py  results.py  riskaverse_datasets.py  sft.py
(+29 files in other folders)
