[project]
name = "risk-averse-ai"
version = "0.1.0"
description = "Constitutional character training as a method arm on the riskaverseAIs benchmark"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
    "stagehand",
    "bellhop-py",
    "marquee-serve",
    "databrowser",
    # Reverse-KL character distillation driver (aligne.train.tinker), pinned to
    # a release tag. aligne's core install is light (httpx/numpy/scipy) and its
    # train drivers import tinker/torch LAZILY, so `import aligne.train.tinker`
    # (and `flow.py --help`) work without the heavy `train` extra below.
    "aligne",
]

[project.optional-dependencies]
# Actually RUNNING a distill (flow.py's distill step) needs aligne's Tinker
# runtime — tinker/tinker-cookbook/torch — which aligne exposes as its own
# `tinker` extra. tinker requires Python <3.14 (see CLAUDE.md), so the marker
# keeps the base project on >=3.11 without pinning it down; install under a
# 3.12 venv (`uv sync --extra train`).
train = [
    "aligne[tinker]; python_version < '3.14'",
]

[tool.uv]
package = false

[tool.uv.sources]
stagehand = { git = "https://github.com/dtch1997/stagehand" }
bellhop-py = { git = "https://github.com/dtch1997/bellhop" }
marquee-serve = { git = "https://github.com/dtch1997/marquee" }
databrowser = { git = "https://github.com/dtch1997/databrowser" }
aligne = { git = "https://github.com/ArcadiaImpact/aligne.git", tag = "v0.2.0" }
